secure feild moved to env